WebCore: Fix the rendering of HTMLProgressElement https://bugs.webkit.org/show_bug.cgi?id=36206

Reviewed by Antti Koivisto.

Update the rendering and css to conform to
http://www.whatwg.org/specs/web-apps/current-work/complete.html#the-progress-element-0.
Updated the tests and the expected results accordingly.

* css/html.css:
* rendering/RenderProgress.cpp:
* rendering/RenderProgress.h:

LayoutTests: Fix the rendering of HTMLProgressElement
https://bugs.webkit.org/show_bug.cgi?id=36206
Add dir=rtl test and update the expected results.

Reviewed by Antti Koivisto.

* fast/dom/HTMLProgressElement/progress-element.html:
* platform/qt/fast/dom/HTMLProgressElement/progress-element-expected.checksum:
* platform/qt/fast/dom/HTMLProgressElement/progress-element-expected.png:
* platform/qt/fast/dom/HTMLProgressElement/progress-element-expected.txt:



Canonical link: https://commits.webkit.org/47923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56629 268f45cc-cd09-0410-ab3c-d52691b4dbfc